--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "chai": "^3.2.0",
